--- a/_sass/_jekyll-doc-theme.scss
+++ b/_sass/_jekyll-doc-theme.scss
@@ -19,7 +19,7 @@ html {
   
   .header-container {
     background-color: black;
-    background: rgba(0, 0, 0, .5)), url('../img/bg.jpg') no-repeat 50% 0;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../img/bg.jpg') no-repeat 50% 0;
     color: #fff;
   
     h1 {
