--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -11,6 +11,10 @@ layout: default
         <div class="col-md-8">
             <h1>{{ page.title }}</h1>
             <div id="markdown-content-container">{{ content }}</div>
+            <div style="clear:both;">
+              <p class="text-center">
+              </p>
+            </div>
             <hr>
             {% include section_nav.html %}
         </div>
