--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,8 +13,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | relative_url }}">About</a></li>
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/team/" | relative_url }}">Team</a></li>
+                <li {% if page.sectionid=='docs/home' %} class="active" {% endif %}><a href="{{ "/docs/home/" | relative_url }}">About</a></li>
+                <li {% if page.sectionid=='docs/team' %} class="active" {% endif %}><a href="{{ "/docs/team/" | relative_url }}">Team</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | relative_url }}">Blog</a></li>
             </ul>
         </div>
